--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 body {
   font-family: "Red Hat Display", sans-serif;
   font-size: 16px;
-  background: url(/images/pattern-background-desktop.svg) transparent no-repeat;
+  background: url(./images/pattern-background-desktop.svg) transparent no-repeat;
   background-size: 100%;
   background-color: var(--Pale-blue);
 }
@@ -138,7 +138,7 @@ main {
 
 @media screen and (max-width: 490px) {
   body {
-    background: url(/images/pattern-background-mobile.svg) transparent no-repeat;
+    background: url(./images/pattern-background-mobile.svg) transparent no-repeat;
     background-size: 100%;
     background-color: var(--Pale-blue);
   }
